2001-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	no comment

2001-11-21  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot, fvwm2rc from Filip Hroch.

2001-11-07  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot from J G A van Riswick.

2001-10-13  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/*.html:
	regenerated man pages

2001-10-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.3

2001-09-28  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot from Christian Lyra.
	* screenshots/index.html: Screenshot from C J Lawrence.
	* screenshots/index.html: Screenshots from Glen Lee Edwards.

2001-09-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html:
	updated for 2.4.2

2001-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.1

2001-07-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_f2m_communication.html:
	updated Xinerama module interface

2001-08-10  Dan Espen  <dane@mk.telcordia.com>

	* index.html: Add menu samples to main page.

	* sample-menus/BlueMarble.fvwmrc:
	* sample-menus/BlueMarble.gif:
	* sample-menus/index.html:
	* sample-menus/weird10dark.xpm:
 	Menu samples.

2001-07-25  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	restored image-in-center layout, some html clean-up
	* download.html:
	fixed link to manpages

2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_f2m_communication.html:
	added description for Xinerama

2001-07-17  Dan Espen  <dane@mk.telcordia.com>

	* index.html (Created): Flood is no longer news.
	New streamlined layout.

2001-07-10  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/index.html:
	* generated/manpages/fvwm-config.html:
	added the man page of fvwm-config

2001-07-04  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/index.html:
	* generated/index.html: