@@ -67,8 +67,12 @@
       And don't forget about Newsgroups:
 
     <ul>
-      <li><a href="news:comp.windows.x.apps">comp.windows.x.apps</a> - for discussing and announcing apps like FVWM.
-      <li><a href="news:comp.windows.x">comp.windows.x</a> - for general X11 discussions and advice.
+      <li><a href="news:comp.windows.x.apps">comp.windows.x.apps</a>
+- for discussing and announcing apps like FVWM.
+(Questions about about are best asked by sending mail to
+<a href="mailto:fvwm@fvwm.org">fvwm@fvwm.org</a>.)
+      <li><a href="news:comp.windows.x">comp.windows.x</a>
+- for general X11 discussions and advice.
     </ul>
 
     <p>
