@@ -1,3 +1,8 @@
+2001-12-07  Dan Espen  <dane@mk.telcordia.com>
+
+	* links.html: Clarify that FVWM questions are best answered when asked
+	at fvwm@fvwm.org.
+
 2001-11-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm-cats/index.html:
